<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/care_imageView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/care"
        android:scaleType="fitStart"
        android:src="@drawable/care"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:letterSpacing="0.04"
        android:text="@string/welcome_back"
        android:textSize="32sp"
        android:textStyle="bold"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintStart_toStartOf="@id/care_imageView"
        app:layout_constraintTop_toBottomOf="@+id/care_imageView" />

    <TextView
        android:id="@+id/sign_in_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/welcome_back_tv"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_tv" />

    <EditText
        android:id="@+id/sign_in_phone_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="36dp"
        android:drawableStart="@drawable/phone_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_password_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_desc_tv" />

    <EditText
        android:id="@+id/sign_in_password_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:drawableStart="@drawable/password_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_phone_edt"
        app:layout_constraintStart_toStartOf="@+id/sign_in_phone_edt"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_phone_edt" />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_password_edt"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edt" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_tv"
        app:layout_constraintStart_toStartOf="@+id/sign_in_password_edt"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv" />

    <TextView
        android:id="@+id/new_user_tv"
        style="@style/Theme.SignInUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_user"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_tv"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/pink_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/new_user_tv"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
        app:layout_constraintStart_toEndOf="@+id/new_user_tv"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>